Added icons to i3 status bar, added urxvt Xresources

--- a/.i3/.i3status.conf
+++ b/.i3/.i3status.conf
@@ -3,10 +3,25 @@ general {
    interval = 5
 }
 
+order += "volume master"
+order += "ethernet eth0"
 order += "wireless wlan0"
 order += "battery 0"
 order += "tztime local"
 
+volume master {
+  device = "default"
+  mixer = "Master"
+  mixer_idx = 0
+
+  format = " %volume"
+  format_muted = " %volume"
+}
+
+ethernet eth0 {
+  format_up = "? eth0? ? %quality ? %essid ?  %bitrate ? %ip"
+  format_down = ""
+}
 
 wireless wlan0 {
    format_up = "W: (%quality at %essid, %bitrate) %ip"
@@ -15,7 +30,7 @@ wireless wlan0 {
 
 battery 0 {
    format = "%status %percentage %remaining %emptytime"
-   format_down = "No battery"
+   format_down = ""
 }
 
 tztime local {
