--- a/.i3/config
+++ b/.i3/config
@@ -149,6 +149,9 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+
+   font pango:DejaVu Sans Mono, Icons 10 
+
    colors  {
       #type              #border #bg     #font
       focused_workspace  #008fff #007fff #ffffff
