Added icons to i3 status bar

--- a/.i3/.i3status.conf
+++ b/.i3/.i3status.conf
@@ -5,7 +5,7 @@ general {
 
 order += "volume master"
 order += "ethernet eth0"
-order += "wireless wlan0"
+order += "wireless wlp2s0"
 order += "battery 0"
 order += "tztime local"
 
@@ -23,14 +23,19 @@ ethernet eth0 {
   format_down = ""
 }
 
-wireless wlan0 {
-   format_up = "W: (%quality at %essid, %bitrate) %ip"
+wireless wlp2s0{
+   format_up = " (%quality, %bitrate)"
    format_down = "W: down"
 }
 
 battery 0 {
-   format = "%status %percentage %remaining %emptytime"
-   format_down = ""
+   format = "%status %percentage"
+   status_chr = ""
+   status_full = ""
+   status_bat = ""
+   
+   low_threshold = 30
+   threshold_type = "percentage"
 }
 
 tztime local {
